syntax = "proto3";

package com.cognite.beam.proto;

import "google/protobuf/struct.proto";

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;

/*
A Point is the basic geometry object. It represents a single coordinate point consisting of
longitude / latitude (or easting / northing) and an optional elevation.
 */
message Point {
    double lon = 1;
    double lat = 2;
    optional double elev = 3;
}

message MultiPoint {
    repeated Point coordinates = 1;
}

message LineString {
    repeated Point coordinates = 1;
}

message MultiLineString {
    repeated LineString coordinates = 1;
}

message Polygon {
    repeated LineString coordinates = 1;
}

message MultiPolygon {
    repeated Polygon coordinates = 1;
}

message Geometry {
    oneof geometry_type {
        Point point = 1;
        MultiPoint multi_point = 2;
        LineString line_string = 3;
        MultiLineString multi_line_string = 4;
        Polygon polygon = 5;
        MultiPolygon multi_polygon = 6;
    }
}

message Asfdasdf {
    enum ValueType {
        DOUBLE = 0;
        STRING = 1;
        LONG = 2;
    }

    string external_id = 1;
    optional string name = 2;
    optional string description = 3;
    ValueType value_type = 4;
    map<string, string> metadata = 5;
    optional int64 created_time = 6;
    optional int64 last_updated_time = 7;
}
